--- a/hsr_irp_jr603/object_color_detector/config/vision_config.yaml
+++ b/hsr_irp_jr603/object_color_detector/config/vision_config.yaml
@@ -1,20 +1,10 @@
-blue:
-  hmax: 230
-  hmin: 190
-green:
-  hmax: 190
-  hmin: 100
+blue: {hmax: 330, hmin: 177}
+green: {hmax: 170, hmin: 130}
 image:
   ROI_height: 370
   ROI_wdith: 640
   ROI_x: 0
   ROI_y: 0
-  reg_x:
-  - -0.0006621064632114358
-  - 0.5132114355871262
-  reg_y:
-  - -0.000669988552959397
-  - 0.25727560433640845
-red:
-  hmax: 60
-  hmin: 0
+  reg_x: [-0.016666666666666673, 3.516666666666668]
+  reg_y: [-0.09999999999999999, 33.5]
+red: {hmax: 80, hmin: 0}
