--- a/hsr_irp_jr603/object_color_detector/config/vision_config.yaml
+++ b/hsr_irp_jr603/object_color_detector/config/vision_config.yaml
@@ -1,10 +1,10 @@
-blue: {hmax: 330, hmin: 177}
-green: {hmax: 170, hmin: 130}
+blue: {hmax: 291, hmin: 246}
+green: {hmax: 158, hmin: 120}
 image:
-  ROI_height: 370
+  ROI_height: 480
   ROI_wdith: 640
   ROI_x: 0
   ROI_y: 0
-  reg_x: [-0.016666666666666673, 3.516666666666668]
-  reg_y: [-0.09999999999999999, 33.5]
-red: {hmax: 80, hmin: 0}
+  reg_x: [0.0007413144500995795, 0.11628678911263549]
+  reg_y: [0.0008080207898035937, -0.30640148349352275]
+red: {hmax: 20, hmin: 0}
